--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test":"node test.js",
-    "start": "node index.js",
+    "dist":"npx tsc",
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
     "prepare": "husky"
   },
   "author": "lovepreet singh",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.10.10",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.2"
+    "lint-staged": "^15.4.2",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
