--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "dist": "npx tsc",
     "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "prepare": "husky"
   },
   "author": "lovepreet singh",
   "license": "ISC",
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint:fix",
+      "npm run format:fix"
+    ]
+  },
   "description": "",
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.10.10",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0"
   }
 }
