--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node dist/index.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --fix",
     "prepare": "husky"
   },
   "author": "lovepreet singh",
@@ -24,9 +26,11 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.10.10",
+    "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.2",
     "nodemon": "^3.1.9",
+    "prettier": "3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0"
