--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@types/source-map-support": "^0.5.10",
     "body-parser": "^1.19.0",
+    "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "dotenv-flow": "^4.1.0",
