--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^10.0.0",
     "dotenv-flow": "^4.1.0",
     "express": "^4.17.1",
+    "mongoose": "^8.9.5",
     "source-map-support": "^0.5.21",
     "winston": "^3.17.0"
   }
