feat: Helmet js installation

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ SERVER_URL=http://localhost:3000
 
 # Database
 DATABASE_URL=""
+
+
+# Migration
+MIGRATE_MONGO_URI="" # Same as database url
+MIGRATE_AUTOSYNC="true" # false
