--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:fix": "eslint --fix",
     "format:check": "prettier . --check",
     "format:fix": "prettier . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "migrate:dev": "cross-env MIGRATE_MODE=development node script/migration.js",
+    "migrate:prod": "cross-env MIGRATE_MODE=production node script/migration.js"
   },
   "author": "lovepreet singh",
   "license": "ISC",
@@ -44,8 +46,11 @@
     "dotenv": "^10.0.0",
     "dotenv-flow": "^4.1.0",
     "express": "^4.17.1",
+    "helmet": "^8.0.0",
     "mongoose": "^8.9.5",
     "source-map-support": "^0.5.21",
-    "winston": "^3.17.0"
+    "ts-migrate-mongoose": "^3.8.9",
+    "winston": "^3.17.0",
+    "winston-mongodb": "^6.0.0"
   }
 }
