--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
@@ -42,6 +43,7 @@
     "@types/source-map-support": "^0.5.10",
     "body-parser": "^1.19.0",
     "colorette": "^2.0.20",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "dotenv-flow": "^4.1.0",
