--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "scripts": {
     "dist": "npx tsc",
-    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --legacy-watch src/server.ts",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -49,6 +49,7 @@
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "rate-limiter-flexible": "^5.0.5",
     "source-map-support": "^0.5.21",
